@@ -16,6 +16,39 @@ package|;
 end_package
 begin_import
 import|import
+name|java
+operator|.
+name|util
+operator|.
+name|concurrent
+operator|.
+name|Executors
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|concurrent
+operator|.
+name|ScheduledExecutorService
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|concurrent
+operator|.
+name|TimeUnit
+import|;
+end_import
+begin_import
+import|import
 name|org
 operator|.
 name|apache
@@ -76,6 +109,19 @@ name|org
 operator|.
 name|apache
 operator|.
+name|solr
+operator|.
+name|util
+operator|.
+name|DefaultSolrThreadFactory
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
 name|zookeeper
 operator|.
 name|WatchedEvent
@@ -118,6 +164,15 @@ operator|.
 name|junit
 operator|.
 name|Ignore
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|junit
+operator|.
+name|Test
 import|;
 end_import
 begin_class
@@ -548,6 +603,219 @@ expr_stmt|;
 name|zkClient
 operator|.
 name|close
+argument_list|()
+expr_stmt|;
+block|}
+block|}
+finally|finally
+block|{
+name|server
+operator|.
+name|shutdown
+argument_list|()
+expr_stmt|;
+block|}
+block|}
+annotation|@
+name|Test
+DECL|method|testReconnectWhenZkDisappeared
+specifier|public
+name|void
+name|testReconnectWhenZkDisappeared
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|ScheduledExecutorService
+name|executor
+init|=
+name|Executors
+operator|.
+name|newSingleThreadScheduledExecutor
+argument_list|(
+operator|new
+name|DefaultSolrThreadFactory
+argument_list|(
+literal|"connectionManagerTest"
+argument_list|)
+argument_list|)
+decl_stmt|;
+comment|// setup a SolrZkClient to do some getBaseUrlForNodeName testing
+name|String
+name|zkDir
+init|=
+name|createTempDir
+argument_list|(
+literal|"zkData"
+argument_list|)
+operator|.
+name|toFile
+argument_list|()
+operator|.
+name|getAbsolutePath
+argument_list|()
+decl_stmt|;
+name|ZkTestServer
+name|server
+init|=
+operator|new
+name|ZkTestServer
+argument_list|(
+name|zkDir
+argument_list|)
+decl_stmt|;
+try|try
+block|{
+name|server
+operator|.
+name|run
+argument_list|()
+expr_stmt|;
+name|AbstractZkTestCase
+operator|.
+name|tryCleanSolrZkNode
+argument_list|(
+name|server
+operator|.
+name|getZkHost
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|AbstractZkTestCase
+operator|.
+name|makeSolrZkNode
+argument_list|(
+name|server
+operator|.
+name|getZkHost
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|SolrZkClient
+name|zkClient
+init|=
+operator|new
+name|SolrZkClient
+argument_list|(
+name|server
+operator|.
+name|getZkAddress
+argument_list|()
+argument_list|,
+name|TIMEOUT
+argument_list|)
+decl_stmt|;
+name|ConnectionManager
+name|cm
+init|=
+name|zkClient
+operator|.
+name|getConnectionManager
+argument_list|()
+decl_stmt|;
+try|try
+block|{
+name|assertFalse
+argument_list|(
+name|cm
+operator|.
+name|isLikelyExpired
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|cm
+operator|.
+name|isConnected
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|cm
+operator|.
+name|setZkServerAddress
+argument_list|(
+literal|"http://BADADDRESS"
+argument_list|)
+expr_stmt|;
+name|executor
+operator|.
+name|schedule
+argument_list|(
+parameter_list|()
+lambda|->
+block|{
+name|cm
+operator|.
+name|setZkServerAddress
+argument_list|(
+name|server
+operator|.
+name|getZkAddress
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+argument_list|,
+literal|5
+argument_list|,
+name|TimeUnit
+operator|.
+name|SECONDS
+argument_list|)
+expr_stmt|;
+comment|// reconnect -- should no longer be likely expired
+name|cm
+operator|.
+name|process
+argument_list|(
+operator|new
+name|WatchedEvent
+argument_list|(
+name|EventType
+operator|.
+name|None
+argument_list|,
+name|KeeperState
+operator|.
+name|Expired
+argument_list|,
+literal|""
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertFalse
+argument_list|(
+name|cm
+operator|.
+name|isLikelyExpired
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|cm
+operator|.
+name|isConnected
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+finally|finally
+block|{
+name|cm
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|zkClient
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|executor
+operator|.
+name|shutdown
 argument_list|()
 expr_stmt|;
 block|}
