@@ -165,9 +165,9 @@ specifier|final
 name|ZkClientConnectionStrategy
 name|connectionStrategy
 decl_stmt|;
+comment|//expert: mutable for testing
 DECL|field|zkServerAddress
 specifier|private
-specifier|final
 name|String
 name|zkServerAddress
 decl_stmt|;
@@ -622,6 +622,10 @@ argument_list|)
 expr_stmt|;
 block|}
 block|}
+do|do
+block|{
+comment|// This loop will break iff a valid connection is made. If a connection is not made then it will repeat and
+comment|// try again to create a new connection.
 try|try
 block|{
 name|connectionStrategy
@@ -763,6 +767,7 @@ block|}
 block|}
 argument_list|)
 expr_stmt|;
+break|break;
 block|}
 catch|catch
 parameter_list|(
@@ -781,7 +786,26 @@ argument_list|,
 name|e
 argument_list|)
 expr_stmt|;
+name|log
+operator|.
+name|info
+argument_list|(
+literal|"Could not connect due to error, sleeping for 5s and trying agian"
+argument_list|)
+expr_stmt|;
+name|waitSleep
+argument_list|(
+literal|1000
+argument_list|)
+expr_stmt|;
 block|}
+block|}
+do|while
+condition|(
+operator|!
+name|isClosed
+condition|)
+do|;
 name|log
 operator|.
 name|info
@@ -900,6 +924,40 @@ literal|0.90
 argument_list|)
 argument_list|)
 return|;
+block|}
+DECL|method|waitSleep
+specifier|public
+specifier|synchronized
+name|void
+name|waitSleep
+parameter_list|(
+name|long
+name|waitFor
+parameter_list|)
+block|{
+try|try
+block|{
+name|wait
+argument_list|(
+name|waitFor
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|InterruptedException
+name|e
+parameter_list|)
+block|{
+name|Thread
+operator|.
+name|currentThread
+argument_list|()
+operator|.
+name|interrupt
+argument_list|()
+expr_stmt|;
+block|}
 block|}
 DECL|method|waitForConnected
 specifier|public
@@ -1162,6 +1220,23 @@ name|e
 argument_list|)
 throw|;
 block|}
+block|}
+comment|//expert: mutable for testing
+DECL|method|setZkServerAddress
+specifier|public
+name|void
+name|setZkServerAddress
+parameter_list|(
+name|String
+name|zkServerAddress
+parameter_list|)
+block|{
+name|this
+operator|.
+name|zkServerAddress
+operator|=
+name|zkServerAddress
+expr_stmt|;
 block|}
 block|}
 end_class
